kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: improved-broccoli
spec:
  selector:
    matchLabels:
      run: improved-broccoli
  template:
    metadata:
      labels:
        run: improved-broccoli
    spec:
      containers:
        - name: improved-broccoli
          image: ermiasdev/improved-broccoli:latest
          ports:
            - containerPort: 8000
